feat: Added uit for notifiers; fix: Cleaned up code
